# calendar-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README  README.md  TODO.md  app.ts  calendar.go  db.go  db_test.go  docker-compose.yaml  example.ics  fly.toml  go.mod  go.sum  handlers.go  index.html  main.go  package-lock.json  package.json  server.ts  tsconfig.json
cmd/server/: main.go
devops/: calendar-proxy.service  register-service.sh
examples/: quick_dev.rs
pkg/calendar/: calendar.go
pkg/db/: db.go  db_test.go
pkg/handlers/: handlers.go
src/: lib.rs  main.rs
static/: index.html
