[package]
name = "calendar-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
tokio = { version = "1.12.0", features = ["full"] }
icalendar = "0.15.6"
axum = "0.6.19"
serde = { version = "1.0.179", features = ["serde_derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
