[package]
name = "calendar-proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.19", features = ["form"] }
icalendar = "0.15.6"
reqwest = "0.11"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.179", features = ["serde_derive"] }
tokio = { version = "1.12.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}

[dev-dependencies]
anyhow = "1"
